--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "remixicon": "^4.6.0",
